syntax = "proto3";
package kurtosis_package_indexer;

option go_package = "github.com/kurtosis-tech/kurtosis-package-indexer/api/golang/generated";

service KurtosisPackageIndexer {
  rpc Ping(IndexerPing) returns (IndexerPong);
}

message IndexerPing {}

message IndexerPong {}
